uploading employee registry

--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,19 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/Employee-Registry">
+                                <div class="card">
+                                    <h1>Employee Registry</h1>
+                                    <img class="card-img-top" id="employee-registry" src="assets/images/employee-registry.png" alt="employee-registry">
+                                    <div class="card-body">
+                                        <p class="card-text">This command line application prompts the user for information about the manager and the team members. After completing the registry an HTML file is generated with the information provided by the user.
+                                        </p>
+                                        <a href="https://www.youtube.com/watch?v=nw7_on4DQ5Y">Check it out</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Earthquake_Tracker">
                                 <div class="card">
                                     <h1>EarthQuake Tracker</h1>
@@ -55,21 +68,6 @@
                                             app displays the current weather and 5 days forecast on the screen.
                                         </p>
                                         <a href="https://jnsmelinda.github.io/Earthquake_Tracker">Check it out</a>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/Password-generator">
-                                <div class="card">
-                                    <h1>Password Generator</h1>
-                                    <img class="card-img-top" src="assets/images/password.png" alt="Password-generator">
-                                    <div class="card-body">
-                                        <p class="card-text">The random password generator promts the user for the
-                                            password length (8-128) and the strength of the password (lower case, upper case,
-                                            numerical, special characters), then displays the generated password on the screen.
-                                        </p>
-                                        <a href="https://jnsmelinda.github.io/Password-generator">Check it out</a>
                                     </div>
                                 </div>
                             </a>
@@ -103,6 +101,23 @@
                             </a>
                         </div>
                         <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/Password-generator">
+                                <div class="card">
+                                    <h1>Password Generator</h1>
+                                    <img class="card-img-top" src="assets/images/password.png" alt="Password-generator">
+                                    <div class="card-body">
+                                        <p class="card-text">The random password generator promts the user for the
+                                            password length (8-128) and the strength of the password (lower case, upper case,
+                                            numerical, special characters), then displays the generated password on the screen.
+                                        </p>
+                                        <a href="https://jnsmelinda.github.io/Password-generator">Check it out</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/conference-application">
                                 <div class="card">
                                     <h1>Conference registry</h1>
@@ -114,8 +129,6 @@
                                 </div>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Recipe-book">
                                 <div class="card">
@@ -138,6 +151,8 @@
                                 </div>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
                                 <div class="card">
@@ -149,8 +164,6 @@
                                 </div>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GuitarHero">
                                 <div class="card">
@@ -158,18 +171,6 @@
                                     <img class="card-img-top" src="assets/images/guitar.jpeg" alt="guitarhero">
                                     <div class="card-body">
                                         <p class="card-text">Guitar simulator that allows the user to play on a guitar by using the keyboard of the computer ("keytar"). The application constructs notes on the chromatic scale and the client can play these notes by pressing different keys on the keyboard.</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/20Questions">
-                                <div class="card">
-                                    <h1>20 Questions</h1>
-                                    <img class="card-img-top" src="assets/images/tree.jpeg" alt="20Questions">
-                                    <div class="card-body">
-                                        <p class="card-text">Yes-no question game in which the player thinks
-                                            of an object and the computer tries to guess it by asking yes-no questions. The computer becomes smarter after each failed round and learns the new question-answer pair to win more future games.</p>
                                     </div>
                                 </div>
                             </a>
@@ -188,12 +189,13 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GrammarSolver">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/20Questions">
                                 <div class="card">
-                                    <h1>Grammar solver</h1>
-                                    <img class="card-img-top" src="assets/images/the-big-dog-hit-the-big-dog.png" alt="Grammar">
+                                    <h1>20 Questions</h1>
+                                    <img class="card-img-top" src="assets/images/tree.jpeg" alt="20Questions">
                                     <div class="card-body">
-                                        <p class="card-text">This program reads an input file with a grammar in Backus-Naur Form (BNF) and allows the user to randomly generate elements of the grammar. - Java, OOP, Collections API, Recursion, regex, Generics</p>
+                                        <p class="card-text">Yes-no question game in which the player thinks
+                                            of an object and the computer tries to guess it by asking yes-no questions. The computer becomes smarter after each failed round and learns the new question-answer pair to win more future games.</p>
                                     </div>
                                 </div>
                             </a>
@@ -231,6 +233,17 @@
                                     <img class="card-img-top" src="assets/images/LinkedList-in-Java.png" alt="assassination">
                                     <div class="card-body">
                                         <p class="card-text">Assassin manager keeps track of who is stalking whom and the history of who killed whom. This Java program starts with a circular chain of assassination targets what is linked list, called the “kill ring”.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GrammarSolver">
+                                <div class="card">
+                                    <h1>Grammar solver</h1>
+                                    <img class="card-img-top" src="assets/images/the-big-dog-hit-the-big-dog.png" alt="Grammar">
+                                    <div class="card-body">
+                                        <p class="card-text">This program reads an input file with a grammar in Backus-Naur Form (BNF) and allows the user to randomly generate elements of the grammar. - Java, OOP, Collections API, Recursion, regex, Generics</p>
                                     </div>
                                 </div>
                             </a>
