uploading burger app

--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,19 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/Eat-Da-Burger">
+                                <div class="card">
+                                    <h1>Eat-Da-Burger</h1>
+                                    <img class="card-img-top" src="assets/images/burger-demo.png" alt="Eat-Da-Burger">
+                                    <div class="card-body">
+                                        <p class="card-text">This restaurant app lets the users input the names of burgers they'd like to eat. add a burger to the Reade to eat! section When you feel hungry simply Devour! it.
+                                        </p>
+                                        <a href="https://lit-mesa-27296.herokuapp.com/index">Check it out</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Employee-Registry">
                                 <div class="card">
                                     <h1>Employee Registry</h1>
@@ -57,6 +70,8 @@
                                 </div>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Weather-Dashboard">
                                 <div class="card">
@@ -67,13 +82,11 @@
                                             location and the
                                             app displays the current weather and 5 days forecast on the screen.
                                         </p>
-                                        <a href="https://jnsmelinda.github.io/Earthquake_Tracker">Check it out</a>
+                                        <a href="https://jnsmelinda.github.io/Weather-Dashboard">Check it out</a>
                                     </div>
                                 </div>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Work-Day-Scheduler">
                                 <div class="card">
@@ -100,6 +113,8 @@
                                 </div>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Password-generator">
                                 <div class="card">
@@ -115,8 +130,6 @@
                                 </div>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/conference-application">
                                 <div class="card">
@@ -140,6 +153,8 @@
                                 </div>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman">
                                 <div class="card">
@@ -147,19 +162,6 @@
                                     <img class="card-img-top" src="assets/images/binary-tree.png" alt="Huffman">
                                     <div class="card-body">
                                         <p class="card-text">The application compresses and decompresses text files by using Huffman Coding based on the frequency of the characters.</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
-                                <div class="card">
-                                    <h1>Hangman</h1>
-                                    <img class="card-img-top" src="assets/images/hangman.png" alt="hangman">
-                                    <div class="card-body">
-                                        <p class="card-text">Evil hangman application which manages and modifies the state of the game on-the-fly and it tries to trick the user. It starts the game with a set of words instead of one word and reduces the set to the words what are less likely to be discovered after each guess, until the player looses or only one word is in the set.</p>
                                     </div>
                                 </div>
                             </a>
@@ -201,13 +203,12 @@
                             </a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
                                 <div class="card">
-                                    <h1>DNA Analyzer</h1>
-                                    <img class="card-img-top" src="assets/images/dna.webp" alt="DNAAnalyzer">
+                                    <h1>Hangman</h1>
+                                    <img class="card-img-top" src="assets/images/hangman.png" alt="hangman">
                                     <div class="card-body">
-                                        <p class="card-text">This DNA analyzing application that reads data from
-                                            the National Center for Biotechnology Information and provides statistics about nucleotides and predicts whether or not the sequence is a protein-coding gene.</p>
+                                        <p class="card-text">Evil hangman application which manages and modifies the state of the game on-the-fly and it tries to trick the user. It starts the game with a set of words instead of one word and reduces the set to the words what are less likely to be discovered after each guess, until the player looses or only one word is in the set.</p>
                                     </div>
                                 </div>
                             </a>
@@ -244,6 +245,18 @@
                                     <img class="card-img-top" src="assets/images/the-big-dog-hit-the-big-dog.png" alt="Grammar">
                                     <div class="card-body">
                                         <p class="card-text">This program reads an input file with a grammar in Backus-Naur Form (BNF) and allows the user to randomly generate elements of the grammar. - Java, OOP, Collections API, Recursion, regex, Generics</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">
+                                <div class="card">
+                                    <h1>DNA Analyzer</h1>
+                                    <img class="card-img-top" src="assets/images/dna.webp" alt="DNAAnalyzer">
+                                    <div class="card-body">
+                                        <p class="card-text">This DNA analyzing application that reads data from
+                                            the National Center for Biotechnology Information and provides statistics about nucleotides and predicts whether or not the sequence is a protein-coding gene.</p>
                                     </div>
                                 </div>
                             </a>
