--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
                                     <h1>Eat-Da-Burger</h1>
                                     <img class="card-img-top" src="assets/images/burger-demo.png" alt="Eat-Da-Burger">
                                     <div class="card-body">
-                                        <p class="card-text">This restaurant app lets the users input the names of burgers they'd like to eat. add a burger to the Reade to eat! section When you feel hungry simply Devour! it.
+                                        <p class="card-text">This restaurant app lets the users input the names of burgers they'd like to eat. add a burger to the Ready to eat! section When you feel hungry simply Devour! it.
                                         </p>
                                         <a href="https://lit-mesa-27296.herokuapp.com/index">Check it out</a>
                                     </div>
