--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,19 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/Vent">
+                                <div class="card">
+                                    <h1>VENT</h1>
+                                    <img class="card-img-top" src="assets/images/vent.PNG" alt="Vent">
+                                    <div class="card-body">
+                                        <p class="card-text">Interactive website to help concerned citizens to see the air quality in their area and to provide a platform where they are able to express their feelings alongside a short message to their local representative regarding the air quality.
+                                        </p>
+                                        <a href="https://vent-airquality-tracker.herokuapp.com/">Check it out</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Eat-Da-Burger">
                                 <div class="card">
                                     <h1>Eat-Da-Burger</h1>
@@ -56,6 +69,9 @@
                                 </div>
                             </a>
                         </div>
+
+                    </div>
+                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Earthquake_Tracker">
                                 <div class="card">
@@ -70,8 +86,6 @@
                                 </div>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Weather-Dashboard">
                                 <div class="card">
@@ -100,6 +114,9 @@
                                 </div>
                             </a>
                         </div>
+
+                    </div>
+                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Code-Quiz">
                                 <div class="card">
@@ -113,8 +130,6 @@
                                 </div>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Password-generator">
                                 <div class="card">
@@ -142,6 +157,9 @@
                                 </div>
                             </a>
                         </div>
+
+                    </div>
+                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Recipe-book">
                                 <div class="card">
@@ -153,8 +171,6 @@
                                 </div>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman">
                                 <div class="card">
@@ -173,6 +189,33 @@
                                     <img class="card-img-top" src="assets/images/guitar.jpeg" alt="guitarhero">
                                     <div class="card-body">
                                         <p class="card-text">Guitar simulator that allows the user to play on a guitar by using the keyboard of the computer ("keytar"). The application constructs notes on the chromatic scale and the client can play these notes by pressing different keys on the keyboard.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                    </div>
+                    <div class="row">
+
+                        <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
+                                <div class="card">
+                                    <h1>Hangman</h1>
+                                    <img class="card-img-top" src="assets/images/hangman.png" alt="hangman">
+                                    <div class="card-body">
+                                        <p class="card-text">Evil hangman application which manages and modifies the state of the game on-the-fly and it tries to trick the user. It starts the game with a set of words instead of one word and reduces the set to the words what are less likely to be discovered after each guess, until the player looses or only one word is in the set.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/JungleGame/src">
+                                <div class="card">
+                                    <h1>Jungle game</h1>
+                                    <img class="card-img-top" src="assets/images/husky.jpg" alt="junglegame">
+                                    <div class="card-body">
+                                        <p class="card-text">Game/simulation with animals in it like a
+                                            jungle. Each species move and behave in different ways in the 2D environment. They meet, feed, move, sleep and kill each other until only one kind of animal will rule the jungle.</p>
                                     </div>
                                 </div>
                             </a>
@@ -203,37 +246,13 @@
                             </a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
+                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">
                                 <div class="card">
-                                    <h1>Hangman</h1>
-                                    <img class="card-img-top" src="assets/images/hangman.png" alt="hangman">
+                                    <h1>DNA Analyzer</h1>
+                                    <img class="card-img-top" src="assets/images/dna.webp" alt="DNAAnalyzer">
                                     <div class="card-body">
-                                        <p class="card-text">Evil hangman application which manages and modifies the state of the game on-the-fly and it tries to trick the user. It starts the game with a set of words instead of one word and reduces the set to the words what are less likely to be discovered after each guess, until the player looses or only one word is in the set.</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/JungleGame/src">
-                                <div class="card">
-                                    <h1>Jungle game</h1>
-                                    <img class="card-img-top" src="assets/images/husky.jpg" alt="junglegame">
-                                    <div class="card-body">
-                                        <p class="card-text">Game/simulation with animals in it like a
-                                            jungle. Each species move and behave in different ways in the 2D environment. They meet, feed, move, sleep and kill each other until only one kind of animal will rule the jungle.</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
-                                <div class="card">
-                                    <h1>Assassin manager</h1>
-                                    <img class="card-img-top" src="assets/images/LinkedList-in-Java.png" alt="assassination">
-                                    <div class="card-body">
-                                        <p class="card-text">Assassin manager keeps track of who is stalking whom and the history of who killed whom. This Java program starts with a circular chain of assassination targets what is linked list, called the “kill ring”.</p>
+                                        <p class="card-text">This DNA analyzing application that reads data from
+                                            the National Center for Biotechnology Information and provides statistics about nucleotides and predicts whether or not the sequence is a protein-coding gene.</p>
                                     </div>
                                 </div>
                             </a>
@@ -249,14 +268,15 @@
                                 </div>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
                                 <div class="card">
-                                    <h1>DNA Analyzer</h1>
-                                    <img class="card-img-top" src="assets/images/dna.webp" alt="DNAAnalyzer">
+                                    <h1>Assassin manager</h1>
+                                    <img class="card-img-top" src="assets/images/LinkedList-in-Java.png" alt="assassination">
                                     <div class="card-body">
-                                        <p class="card-text">This DNA analyzing application that reads data from
-                                            the National Center for Biotechnology Information and provides statistics about nucleotides and predicts whether or not the sequence is a protein-coding gene.</p>
+                                        <p class="card-text">Assassin manager keeps track of who is stalking whom and the history of who killed whom. This Java program starts with a circular chain of assassination targets what is linked list, called the “kill ring”.</p>
                                     </div>
                                 </div>
                             </a>
