replacing brand statement

--- a/index.html
+++ b/index.html
@@ -34,16 +34,13 @@
                         <div class="col-sm-7">
                             <h1 class="display-4" id="greeting">Hi there!</h1>
                             <p class="lead">My name is <strong>Melinda Ivanov</strong>, nice to meet you.</p>
-                            <p>I am a technical-minded developer leveraging an MSc degree in earth sciences from
-                                University of Szeged while currently working towards a full-stack web development
-                                certificate at University of Washington. My experience includes taking responsibilities
-                                in design, technical, and development decisions in academic projects using newly
-                                developed skills in Java backend and JavaScript full stack. As a passionate problem
-                                solver, my aim is to deliver quality products by applying clean design/coding principles
-                                and following agile methodologies. I enjoy creating user-friendly applications while
-                                utilizing both my engineering and science qualifications. I am a fast learner who is
-                                enthusiastic about innovative techniques and excited to leverage my skills as part of a
-                                fast-paced, quality-driven team.</p>
+                            <p>I am a technical-minded developer leveraging MSc degree in earth sciences from University of Szeged and earned
+                                full-stack web development certificate at University of Washington where I honed skills in JavaScript, React,
+                                Node.js and MySQL, MongoDB and gained special interest in server-side technologies. My experience includes taking
+                                responsibilities in design, technical, and development decisions in academic projects using newly developed skills.
+                                I am a passionate problem solver, aiming to deliver quality products by applying clean design/coding principles
+                                while following agile methodologies and a fast learner who is enthusiastic about innovative techniques and excited
+                                to leverage skills as part of a fast-paced, quality-driven team.</p>
 
                         </div>
                         <div class="col-sm-5">
