--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Melinda's website</title>
     <link rel="icon" href="assets/images/favicon.ico">
 </head>
@@ -34,12 +34,18 @@
                         <div class="col-sm-7">
                             <h1 class="display-4" id="greeting">Hi there!</h1>
                             <p class="lead">My name is <strong>Melinda Ivanov</strong>, nice to meet you.</p>
-                            <p>I am a technical-minded developer leveraging MSc degree in earth sciences from University of Szeged and earned
-                                full-stack web development certificate at University of Washington where I honed skills in JavaScript, React,
-                                Node.js and MySQL, MongoDB and gained special interest in server-side technologies. My experience includes taking
-                                responsibilities in design, technical, and development decisions in academic projects using newly developed skills.
-                                I am a passionate problem solver, aiming to deliver quality products by applying clean design/coding principles
-                                while following agile methodologies and a fast learner who is enthusiastic about innovative techniques and excited
+                            <p>I am a technical-minded developer leveraging MSc degree in earth sciences from University
+                                of Szeged and earned
+                                full-stack web development certificate at University of Washington where I honed skills
+                                in JavaScript, React,
+                                Node.js and MySQL, MongoDB and gained special interest in server-side technologies. My
+                                experience includes taking
+                                responsibilities in design, technical, and development decisions in academic projects
+                                using newly developed skills.
+                                I am a passionate problem solver, aiming to deliver quality products by applying clean
+                                design/coding principles
+                                while following agile methodologies and a fast learner who is enthusiastic about
+                                innovative techniques and excited
                                 to leverage skills as part of a fast-paced, quality-driven team.</p>
 
                         </div>
@@ -51,9 +57,20 @@
                         <h2 class="display-4" id="contact">More about me:</h2>
                     </div>
                     <div class="row">
-                        <a href="https://www.linkedin.com/in/melinda-ivanov/" id="linkedin" class="fa fa-linkedin fa-4x" data-toggle="tooltip" data-placement="right" title="Linkedin"></a>
-                        <a href="https://github.com/jnsmelinda" class="fa fa-github fa-4x" data-toggle="tooltip" data-placement="right" title="GitHub" id="github"></a>
-                        <a href="assets/cv/resume.pdf" class="fa fa-file-pdf-o fa-4x" data-toggle="tooltip" data-placement="right" title="Resume" id="resume"></a>
+                        <a href="https://www.linkedin.com/in/melinda-ivanov/" id="linkedin" class="fa fa-linkedin fa-3x"
+                            data-toggle="tooltip" data-placement="right" title="Linkedin"></a>
+                        <a href="https://github.com/jnsmelinda" class="fa fa-github fa-3x" data-toggle="tooltip"
+                            data-placement="right" title="GitHub" id="github"></a>
+                        <a href="assets/cv/resume.pdf" class="fa fa-file-pdf-o fa-3x" data-toggle="tooltip"
+                            data-placement="right" title="Resume" id="resume"></a>
+                    </div>
+                    <div class="row" id="phoneRow">
+                        <div class="fa fas fa-phone fa-1x" id="emailPhone"></div>
+                        <p id="contactInfo">425-614-5541</p>
+                    </div>
+                    <div class="row">
+                        <div class="fa fas fa-envelope" id="emailPhone"></div>
+                        <p id="contactInfo">jns.melinda@gmail.com</p>
                     </div>
                 </div>
             </div>
